==> antmicro/ecos/packages/devs/flash/cortexm/stm32/current/src/stm32_flash.c <==
#include <pkgconf/hal_cortexm_stm32.h>
#include <pkgconf/devs_flash_stm32.h>
#include <cyg/infra/cyg_type.h>
#include <cyg/infra/cyg_ass.h>
#include <cyg/infra/diag.h>
#include <cyg/io/flash.h>
#include <cyg/io/flash_dev.h>
#include <cyg/hal/hal_arch.h>
#include <cyg/hal/hal_intr.h>
#include <cyg/hal/hal_cache.h>
#include <cyg/hal/hal_io.h>
#include <cyg/hal/hal_if.h>
#include <string.h>
#include <cyg/io/stm32_flash.h>
#include CYGHWR_MEMORY_LAYOUT_H
# define F1STYLE 1
# define F2STYLE 1
#define STM32_FLASH_TIMEOUT 1000000
#define WAIT_FOR_FLASH_NOT_BUSY(_timeout_)                              \
  CYG_MACRO_START                                                       \
  (_timeout_) = STM32_FLASH_TIMEOUT;                                    \
  do {                                                                  \
      HAL_READ_UINT32( base+CYGHWR_HAL_STM32_FLASH_SR, sr );            \
  } while( (sr & CYGHWR_HAL_STM32_FLASH_SR_BSY) && (_timeout_)-- > 0 ); \
  CYG_MACRO_END
# define STM32_INTSCACHE_STATE     int _saved_ints_
# define STM32_INTSCACHE_BEGIN()   HAL_DISABLE_INTERRUPTS(_saved_ints_)
# define STM32_INTSCACHE_SUSPEND() HAL_RESTORE_INTERRUPTS(_saved_ints_)
# define STM32_INTSCACHE_RESUME()  HAL_DISABLE_INTERRUPTS(_saved_ints_)
# define STM32_INTSCACHE_END()     HAL_RESTORE_INTERRUPTS(_saved_ints_)
#define STM32_UNCACHED_ADDRESS(__x) ((STM32_TYPE *)(__x))
#define stf_diag( __fmt, ... ) diag_printf("STF: %20s[%3d]: " __fmt, __FUNCTION__, __LINE__, ## __VA_ARGS__ );

static int
stm32_flash_init(struct cyg_flash_dev* dev)
{
    // Set up the block info entries.

    dev->block_info                             = &hal_stm32_flash_priv.block_info[0];
#if defined(STM32_FLASH_NUM_BLOCK_INFOS)
    dev->num_block_infos                        = STM32_FLASH_NUM_BLOCK_INFOS;
#else
    dev->num_block_infos                        = sizeof(hal_stm32_flash_priv.block_info) / sizeof(hal_stm32_flash_priv.block_info[0]);
#endif

    // As stated in the errata sheet, the debug register can only be read in
    // debug mode and is therefore not accessible by user software.

    // Set end address
    dev->end                                    = dev->start + STM32_FLASH_SIZE - 1;

    stf_diag("block_size %d size %08x end %08x\n", dev->block_info[0].block_size, STM32_FLASH_SIZE, dev->end );    

    // Ensure there's nothing hanging over from before us.
    stm32_flash_clear_sr_err();
    
    return CYG_FLASH_ERR_OK;
}

int
stm32_flash_program(struct cyg_flash_dev* dev, cyg_flashaddr_t dest, const void* src, size_t len)
{
    int                     (*program_fn)(volatile STM32_TYPE*, const STM32_TYPE*, cyg_uint32);
    volatile STM32_TYPE*    uncached; 
    const STM32_TYPE*       data;
    size_t                  to_write;
    int                     result  = CYG_FLASH_ERR_OK;
    int                     hsi;

    STM32_INTSCACHE_STATE;

    stf_diag("dest %p src %p len %p(%d)\n", (void *) dest, src, (void *) len, len);
    CYG_CHECK_DATA_PTR(dev, "valid flash device pointer required");
    CYG_ASSERT((dest >= dev->start) && ((CYG_ADDRESS)dest <= dev->end), "flash address out of device range");

#ifdef F1STYLE
    // Source and destination must be 16-bit aligned.
    if( (0 != ((CYG_ADDRESS)dest & 1)) ||
        (0 != ((CYG_ADDRESS)src  & 1)) )
        return CYG_FLASH_ERR_INVALID;
#endif
    
    uncached    = STM32_UNCACHED_ADDRESS(dest);
    data        = (const STM32_TYPE*) src;
    to_write    = len / sizeof(STM32_TYPE);      // For F1: Number of words, not bytes. For F2: STM32_TYPE is a byte.
    program_fn  = (int (*)(volatile STM32_TYPE*, const STM32_TYPE*, cyg_uint32)) cyg_flash_anonymizer( & stm32_flash_hw_program );

    hsi = stm32_enable_hsi();

    STM32_INTSCACHE_BEGIN();
    while (to_write > 0)
    {
        size_t this_write = (to_write < CYGNUM_DEVS_FLASH_STM32_V2_PROGRAM_BURST_SIZE) ?
                             to_write : CYGNUM_DEVS_FLASH_STM32_V2_PROGRAM_BURST_SIZE;

        
        result = (*program_fn)(uncached, data, this_write);
        result = stm32_flash_decode_error( result );
        if (result != CYG_FLASH_ERR_OK)
        {
            break;
        }
        to_write -= this_write;
        if (to_write > 0)
        {
            // There is still more to be written. The last write must have been a burst size
            uncached    += this_write;
            data        += this_write;
            STM32_INTSCACHE_SUSPEND();
            STM32_INTSCACHE_RESUME();
        }
    }
    stm32_flash_clear_sr_err();
    STM32_INTSCACHE_END();
    
    if (hsi)
        stm32_disable_hsi();
    
    return result;
}
