==> antmicro/ecos/packages/devs/flash/freescale/kinetis/current/src/kinetis_flash.c <==
#include <pkgconf/devs_flash_kinetis.h>
#include <pkgconf/hal_cortexm_kinetis.h>
#include <cyg/io/kinetis_flash.h>
#include <cyg/io/flash.h>
#include <cyg/io/flash_dev.h>
#include <cyg/infra/cyg_type.h>
#include <cyg/infra/cyg_ass.h>
#include <cyg/infra/diag.h>
#include <cyg/hal/hal_arch.h>
#include <cyg/hal/hal_intr.h>
#include <cyg/hal/hal_cache.h>
#include <cyg/hal/hal_if.h>
#include <cyg/hal/hal_tables.h>
#include <cyg/hal/hal_io.h>
#include <cyg/infra/testcase.h>
#include <string.h>
#include CYGHWR_MEMORY_LAYOUT_H
#define LONGWORD_SIZE (CYGNUM_DEVS_KINETIS_FLASH_LONGWORD_SIZE)
#define FLASH_ERASE_BLOCK           0x08
#define FLASH_ERASE_ALL_BLOCKS      0X44
#define FLASH_ERASE_SECTOR          0x09
#define FLASH_PROGRAM_LONGWORD      0x06
#define FLASH_PROGRAM_PHRASE        0x07

static int kinetis_flash_init (struct cyg_flash_dev* dev)
{
    HAL_READ_UINT32(CYGHWR_HAL_KINETIS_FMC_PFB0CR, defaultRegisterPFB0CR);
    HAL_READ_UINT32(CYGHWR_HAL_KINETIS_FMC_PFB1CR, defaultRegisterPFB1CR);

    // SIM_SCGC6: FTFL=1
    CYGHWR_HAL_KINETIS_SIM_P->scgc6 |= CYGHWR_HAL_KINETIS_SIM_SCGC6_FTFL_M;

    return CYG_FLASH_ERR_OK;
}

static int kinetis_flash_program (struct cyg_flash_dev* dev,
                            cyg_flashaddr_t _base,
                            const void* _data,
                            size_t _len)
{
    cyghwr_hal_kinetis_flash_t* flashRegister = CYGHWR_HAL_KINETIS_FLASH_P;
    cyg_uint32 endAddress;
    int returnValue = CYG_FLASH_ERR_OK;
    cyg_flashaddr_t base = _base;
    const cyg_uint32* data = _data;
    size_t len = _len;
    cyg_uint32 currentData;
    cyg_uint8 fccob0;
    cyg_uint32 cachestate;

    endAddress = base + len;

    // Base and data have to be 16-bit aligned
    if( (((CYG_ADDRESS)base & 1) != 0) || (((CYG_ADDRESS)data  & 1) != 0))
        return CYG_FLASH_ERR_INVALID;

    // Check for valid range of the addresse
    if((base < dev->start) || ((endAddress - 1) > dev->end))
        return CYG_FLASH_ERR_INVALID;

    cache_off(&cachestate);

    while(len > 0)
    {
        flashRegister->fccob0 = fccob0 = (4 == LONGWORD_SIZE) ?
                                         FLASH_PROGRAM_LONGWORD :
                                         FLASH_PROGRAM_PHRASE;
        flashRegister->fccob1 = (cyg_uint8)((base >> 16) & 0xFF);
        flashRegister->fccob2 = (cyg_uint8)((base >> 8) & 0xFF);
        flashRegister->fccob3 = (cyg_uint8)(base & 0xFF);

        currentData = *data++;
        flashRegister->fccob4 = (cyg_uint8)((currentData >> 24) & 0xFF);
        flashRegister->fccob5 = (cyg_uint8)((currentData >> 16) & 0xFF);
        flashRegister->fccob6 = (cyg_uint8)((currentData >> 8) & 0xFF);
        flashRegister->fccob7 = (cyg_uint8)((currentData) & 0xFF);

        if(FLASH_PROGRAM_PHRASE == fccob0)
        {
            currentData = *data++;
            flashRegister->fccob8 = (cyg_uint8)((currentData >> 24) & 0xFF);
            flashRegister->fccob9 = (cyg_uint8)((currentData >> 16) & 0xFF);
            flashRegister->fccobA = (cyg_uint8)((currentData >> 8) & 0xFF);
            flashRegister->fccobB = (cyg_uint8)((currentData) & 0xFF);
        }

        returnValue = flash_command_sequence();
        if(returnValue != CYG_FLASH_ERR_OK)
        {
            break;
        }
        else
        {
            // Compute the next destination address
            base += LONGWORD_SIZE;

            // Compute size for the next command
            len -= LONGWORD_SIZE;
        }
    }

    cache_on(&cachestate);

    return returnValue;
}
